new controller position turn and move

--- a/drone_controller/CMakeLists.txt
+++ b/drone_controller/CMakeLists.txt
@@ -36,8 +36,8 @@ add_executable(command_node src/command_2_drones.cpp)
 target_link_libraries(command_node ${catkin_LIBRARIES})
 
 # Command 2 drones position controller Node
-add_executable(Position_node src/PositionController_2_drones.cpp)
-target_link_libraries(Position_node ${catkin_LIBRARIES})
+add_executable(Position_move_node src/PositionController_move.cpp)
+target_link_libraries(Position_move_node ${catkin_LIBRARIES})
 
 # Command 2 drones velocity controller Node
 add_executable(command_node_2_pos src/VelocityController_2_drones.cpp)
@@ -46,3 +46,7 @@ target_link_libraries(command_node_2_pos ${catkin_LIBRARIES})
 # Command 2 drones position controller Turn Node
 add_executable(Position_turn_node src/PositionController_turn.cpp)
 target_link_libraries(Position_turn_node ${catkin_LIBRARIES})
+
+# Command 2 drones position controller Turn and Move Node
+add_executable(Position_turn_and_move_node src/PositionController_turn_and_move.cpp)
+target_link_libraries(Position_turn_and_move_node ${catkin_LIBRARIES})
