added the first edition of the new velocity controller

--- a/drone_controller/CMakeLists.txt
+++ b/drone_controller/CMakeLists.txt
@@ -67,6 +67,10 @@ target_link_libraries(Velocity_bar_move_node ${catkin_LIBRARIES})
 add_executable(Velocity_bar_turn_and_move_node src/VelocityController_bar_turn_and_move.cpp)
 target_link_libraries(Velocity_bar_turn_and_move_node ${catkin_LIBRARIES})
 
+# Command 2 drones Velocity controller bar Turn and Move Node V2
+add_executable(Velocity_V2_bar_turn_and_move_node src/VelocityController_V2_bar_turn_and_move.cpp)
+target_link_libraries(Velocity_V2_bar_turn_and_move_node ${catkin_LIBRARIES})
+
 # Command 2 drones Velocity controller 2 masses Turn and Move Node
 add_executable(Velocity_2_masses_turn_and_move_node src/VelocityController_2_masses_turn_and_move.cpp)
 target_link_libraries(Velocity_2_masses_turn_and_move_node ${catkin_LIBRARIES})
